// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform custom include-media max-width 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export const auctionsLabel = css\`
             display: none;

             @media media(max-width: \${vars.global.desktopMinWidth - 1}) {
               display: inline;
             }
          
\`;
"
`;

exports[`transform custom include-media min-width 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export const auctionsLabel = css\`
             display: none;

             @media media(min-width: \${vars.global.desktopMinWidth}) {
               display: inline;
             }
          
\`;
"
`;

exports[`transform custom vars 1`] = `
"import { css } from '@emotion/core';
import * as customVars from '../variables';

export const auctionsLabel = css\`
  display: none;
  color: \${customVars.fooBarBazWhizz};
\`;
"
`;

exports[`transform custom vars in include 1`] = `
"import { css } from '@emotion/core';
import * as customVars from '../variables';

export const mapMarker = css\`
            $map-marker-arrow-size: 8px;

            &::after {
              \${simpleArrow(
    customVars.mapMarkerArrowSize,
    customVars.mapMarkerArrowSize,
    'down',
    vars.colour.white,
  )}

              margin-left: \${customVars.mapMarkerArrowSize};
            }
          
\`;
"
`;

exports[`transform does not export placeholder if its being used in the file 1`] = `
"import { css } from '@emotion/core';

const fePaListingDetailsMain = css\`
  padding: 18px 0;
  flex: 1 1 auto;
  min-width: 0;
  width: 100%;
\`;

export const foo = css\`
  \${fePaListingDetailsMain};
\`;
"
`;

exports[`transform exports placeholder if its not being used in the file 1`] = `
"import { css } from '@emotion/core';

export const fePaListingDetailsMain = css\`
  padding: 18px 0;
  flex: 1 1 auto;
  min-width: 0;
  width: 100%;
\`;
"
`;

exports[`transform handle mixins without args 1`] = `
"import { css } from '@emotion/core';

export const message = css\`
  \${resetTopMargin}

  margin-bottom: 20px;
\`;

function resetTopMargin() {
  return css\`
    > *:first-child {
      margin-top: 0;
    }
  \`;
}
"
`;

exports[`transform handles multi value var refrences 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export const foo = css\`
  border-bottom: 1px solid \${vars.colour.neutral300};
\`;
"
`;

exports[`transform imports fe-brary helpers 1`] = `
"import { css } from '@emotion/core';
import { buttonNormalize } from '@domain-group/fe-brary';

export const agentDetailsRightArrow = css\`
  \${buttonNormalize};

  position: absolute;
\`;
"
`;

exports[`transform imports fe-brary helpers and vars 1`] = `
"import { css } from '@emotion/core';
import { variables as vars, buttonNormalize } from '@domain-group/fe-brary';

export const agentDetailsRightArrow = css\`
  \${buttonNormalize};

  color: \${vars.colour.primaryDark};
\`;

export const anotherRef = css\`
  \${buttonNormalize};
\`;
"
`;

exports[`transform imports non-fe-brary helpers and vars 1`] = `
"import { css } from '@emotion/core';
import { fePaListingDetailsWrapper } from '../utils';

export const notesContainer = css\`
  \${fePaListingDetailsWrapper};

  margin-top: -54px;
\`;
"
`;

exports[`transform mixin exported when not refrenced in file 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};
    color: \${vars.colour.primaryDark};
  \`;
}
"
`;

exports[`transform mixin refrenced does not export 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};
    color: \${vars.colour.primaryDark};
  \`;
}

export const adspot468X60728X90Pos1Container = css\`
  color: blue;
  \${adExact('125px', '700px')}
\`;
"
`;

exports[`transform mixins nested 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export function adExact(width, height) {
  return css\`
    width: \${width};
    height: \${height};

    .bar {
      color: \${vars.colour.primaryDark};
      display: flex;
      align-items: center;

      .foo {
        display: black;
        align-items: start;
      }
    }

    display: block;
  \`;
}
"
`;

exports[`transform nested class no vars 1`] = `
"import { css } from '@emotion/core';

export const button = css\`
  display: flex;
  align-items: center;
  justify-content: center;
\`;

export const foo = css\`
  display: block;
\`;
"
`;

exports[`transform non classname 1`] = `
"import { css } from '@emotion/core';

export const description = css\`
  margin-bottom: 24px;

  ::hover {
    color: pink;
  }

  p {
    margin-bottom: 55px;
  }
\`;

export const foo = css\`
  margin-bottom: 100px;
\`;
"
`;

exports[`transform pesudo elements/classes class nested in pseudo becomes a ref 1`] = `
"import { css } from '@emotion/core';

export const buttonCopy = css\`
  display: flex;
  cursor: pointer;

  &:hover {
    css-\${buttonIcon.name} {
      opacity: 1;
      transform: translateX(0);
    }
  }
\`;

export const buttonIcon = css\`
  opacity: 1;
  transform: translateX(0);
\`;
"
`;

exports[`transform pesudo elements/classes nested 1`] = `
"import { css } from '@emotion/core';

export const buttonCopy = css\`
  background: none;
  border: 0;

  &:focus,
  &:hover {
    outline: 0;
  }
\`;

export const domainIcon = css\`
  width: 14px;
  height: 14px;
\`;
"
`;

exports[`transform pesudo elements/classes nested pseudos are kept 1`] = `
"import { css } from '@emotion/core';

export const additionalLink = css\`
  margin-left: auto;

  &:not(:last-of-type) {
    padding-right: 12px;

    &::after {
      height: 18px;
      content: '';
    }
  }
\`;
"
`;

exports[`transform pesudo elements/classes top level pseudo classes 1`] = `
"import { css } from '@emotion/core';

export const agentDetailsRightArrow = css\`
  &:first-of-type {
    color: black;
  }
\`;
"
`;

exports[`transform placeholder 1`] = `
"import { css } from '@emotion/core';

const messageShared = css\`
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
\`;

export const message = css\`
  \${messageShared};
\`;

export const success = css\`
  \${messageShared};

  border-color: green;
\`;
"
`;

exports[`transform ref nested classes 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export const agentDetailsRightArrow = css\`
  color: \${vars.colour.primaryDark};

  &.with-big-agents {
    css-\${agentDetailsAgent.name} {
      text-align: center;
    }
  }
\`;

export const agentDetailsAgent = css\`
  color: blue;
\`;
"
`;

exports[`transform sass vars to import 1`] = `
"import { css } from '@emotion/core';
import { variables as vars } from '@domain-group/fe-brary';

export const button = css\`
  color: \${vars.colour.primaryDark};
  display: flex;
\`;

export const bar = css\`
  font-size: \${vars.font.h6FontSize};
\`;
"
`;

exports[`transform simple class no vars 1`] = `
"import { css } from '@emotion/core';

export const button = css\`
  display: inline-flex;
  align-items: center;
  justify-content: center;
\`;
"
`;

exports[`transform top level vars 1`] = `
"export const fooBarBaz = '42px';
"
`;

exports[`transform top level vars ref 1`] = `
"import { css } from '@emotion/core';
import * as customVars from '../variables';

const fooBarBaz = '42px';
export const foo = css\`
  height: \${fooBarBaz};
  width: \${customVars.externalVar};
\`;
"
`;

exports[`transform vanilla css media query 1`] = `
"import { css } from '@emotion/core';

export const auctionsLabel = css\`
  display: none;

  @media (min-width: 100px) {
    display: inline;
  }
\`;
"
`;
